🛠️ fix: 편집 모드에서 tab, shift + tab키 사용 시 이전/다음 셀로 이동하는 기능 추가 + 시트 제거 시 모달 적용 (비동기)

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -494,3 +494,25 @@ form[name="renameForm"] {
     }
   }
 }
+
+#modal {
+  background-color: white;
+
+  button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: none;
+    padding: 0.5rem 0.8rem;
+    font-size: 0.8rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    @include border-radius(0.3rem);
+    background-color: #ccc;
+    &:hover {
+      cursor: pointer;
+      color: #ffffff;
+      background-color: #e5752f;
+    }
+  }
+}
